helmcharts/snapshot/hrh-insights/chart/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hrh-insights
  namespace: urbi
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS, PATCH"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization,x-share-token"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: urbi
  rules:
  - host: cityview.momah.gov.sa
    http:
      paths:
      - path: /api/insights/(.*) # <-- New, unique path
        pathType: ImplementationSpecific
        backend:
          service:
            name: hrh-insights # <-- Matches new service name
            port:
              number: 80
  tls:
    - hosts:
        - cityview.momah.gov.sa
